dark mode fixes

--- a/UI/styles.css
+++ b/UI/styles.css
@@ -49,7 +49,7 @@ webview {
     color: #FAFAFA;
   }
   .checkbox-item:hover {
-    color: #FAFAFA; /* Light text color for dark scheme */
+    color: #ffffff; /* Light text color for dark scheme */
     background-color: #1a1a1a; /* Darker background when hovered for dark scheme */
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
@@ -71,7 +71,7 @@ webview {
     background-color: #2d2d2d; /* Slightly darker grey color for dark theme when inactive */
   }
   .checkbox-item.active {
-    color: #ffffff; /* Light text color when active for dark scheme */
+    color: #ffffff !important; /* Light text color when active for dark scheme */
     border: 1px solid #FAFAFA; /* Light border when active for dark scheme */
     font-weight: bold; /* Bold font when active */
     background-color: #1d1d1d; /* Darker background when active for dark scheme */
@@ -349,7 +349,7 @@ button {
 
 @media (prefers-color-scheme: dark) {
   .toggle-button {
-    background-color: #27272A;
+    background-color: #535353;
   }
 }
 @media (prefers-color-scheme: light) {
